welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:8: error: too many arguments for method getCouleurSol: ()java.awt.Color
		tab(i) = getCouleurSol(c)
                                      ^Array1:15: error: type mismatch;
 found   : Int
 required: java.awt.Color
		setCouleurBrosse(i) == tab(i)
                                 ^